--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -16,6 +16,10 @@ input{
 textarea{
     text-align: left;
 }
+.register_field{
+    width: 40%;
+    margin: auto;
+}
 .ad_div:hover{
     opacity: 0.7;
 }
@@ -35,4 +39,5 @@ textarea{
     float: left;
     padding-top: 8px;
     width: 30%;
+    margin-bottom: 0;
 }
