Fixed individual ad buttons

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -29,6 +29,9 @@ textarea{
     top: 50%;
     transform: translateY(50%);
 }
+.form_button_individ{
+    display: inline;
+}
 #submit_length_mod_reg{
     width: 40%;
     margin: auto;
